unpackaged/main/default/objects/Lead/fields/October_kWh__c.field-meta.xml
<CustomField>
    <fullName>October_kWh__c</fullName>
    <label>October kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>