unpackaged/main/default/objects/Lead/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <inlineHelpText>When other is selected as not interested reason, provide more detail here.</inlineHelpText>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>