unpackaged/main/default/objects/Lead/fields/Outside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>