unpackaged/main/default/objects/Lead/fields/Own_or_Rent__c.field-meta.xml
<CustomField>
    <fullName>Own_or_Rent__c</fullName>
    <label>Own or Rent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>