unpackaged/main/default/objects/Lead/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <label>Page URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>