unpackaged/main/default/objects/Lead/fields/Page_UUID__c.field-meta.xml
<CustomField>
    <fullName>Page_UUID__c</fullName>
    <label>Page UUID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>