unpackaged/main/default/objects/Lead/fields/Palmetto_Home_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Home_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palmetto Home Opt-In</label>
    <type>Checkbox</type>
</CustomField>