unpackaged/main/default/objects/Lead/fields/Panel_Type__c.field-meta.xml
<CustomField>
    <fullName>Panel_Type__c</fullName>
    <label>Panel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LG 310N1C-G4</fullName>
            </value>
            <value>
                <fullName>LG 320 Black/Black</fullName>
            </value>
            <value>
                <fullName>LG 320W</fullName>
            </value>
            <value>
                <fullName>LG 330W</fullName>
            </value>
            <value>
                <fullName>LG 335W</fullName>
            </value>
            <value>
                <fullName>Q.PEAK Duo BLK-G5 305</fullName>
            </value>
            <value>
                <fullName>Q.PEAK Duo BLK-G5 310</fullName>
            </value>
            <value>
                <fullName>Q Cells 295W Black on Black</fullName>
            </value>
            <value>
                <fullName>QCells 300W</fullName>
            </value>
            <value>
                <fullName>Q Cells 310W Q.Peak Duo</fullName>
            </value>
            <value>
                <fullName>REC 280TP BLK</fullName>
            </value>
            <value>
                <fullName>REC 290TP BLK</fullName>
            </value>
            <value>
                <fullName>SLA-M 290</fullName>
            </value>
            <value>
                <fullName>Trina_280_Black_on_Black</fullName>
                <label>Trina 280 Black on Black</label>
            </value>
            <value>
                <fullName>Trina 295W</fullName>
            </value>
            <value>
                <fullName>330W All Black Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>