unpackaged/main/default/objects/Lead/fields/Partner_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Job_ID__c</fullName>
    <label>Partner Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>