unpackaged/main/default/objects/Lead/fields/placement__c.field-meta.xml
<CustomField>
    <fullName>placement__c</fullName>
    <label>placement</label>
    <length>120</length>
    <type>Text</type>
</CustomField>