unpackaged/main/default/objects/Lead/fields/Powerwall_Required__c.field-meta.xml
<CustomField>
    <fullName>Powerwall_Required__c</fullName>
    <label>Powerwall Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>