unpackaged/main/default/objects/Lead/fields/Preferred_Appointment_Day__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Appointment_Day__c</fullName>
    <label>Preferred Appointment Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week day</fullName>
            </value>
            <value>
                <fullName>Week end</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>