unpackaged/main/default/objects/Lead/fields/Preferred_Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Appointment_Time__c</fullName>
    <label>Preferred Appointment Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>