unpackaged/main/default/objects/Lead/fields/Promo_Tier__c.field-meta.xml
<CustomField>
    <fullName>Promo_Tier__c</fullName>
    <label>Promo Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>