unpackaged/main/default/objects/Lead/fields/Promotions__c.field-meta.xml
<CustomField>
    <fullName>Promotions__c</fullName>
    <label>Promotions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Give 1k Get 1k</fullName>
            </value>
            <value>
                <fullName>Refer a Friend ($500)</fullName>
            </value>
            <value>
                <fullName>Solar Stimulus</fullName>
            </value>
            <value>
                <fullName>UB6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>