unpackaged/main/default/objects/Lead/fields/Reason_Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Interested__c</fullName>
    <inlineHelpText>If not interested is selected, please pick the right reason.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Has Solar</fullName>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
            </value>
            <value>
                <fullName>Bad Credit</fullName>
            </value>
            <value>
                <fullName>Building Type</fullName>
            </value>
            <value>
                <fullName>Cant Contact</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Decided against Solar</fullName>
            </value>
            <value>
                <fullName>Didn't pass credit</fullName>
            </value>
            <value>
                <fullName>Didn't want it on Front of House</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Ghost Call</fullName>
            </value>
            <value>
                <fullName>House Doesn't Qualify</fullName>
            </value>
            <value>
                <fullName>Lead Clean-up</fullName>
            </value>
            <value>
                <fullName>Mobile Home</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Moving Out of the Area</fullName>
            </value>
            <value>
                <fullName>Moving to a New Home</fullName>
            </value>
            <value>
                <fullName>Need a New Roof</fullName>
            </value>
            <value>
                <fullName>Never agreed to appointment</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Not a single family home</fullName>
            </value>
            <value>
                <fullName>Not Enough Savings</fullName>
            </value>
            <value>
                <fullName>Not in Market</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of State/Range</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Roof Issues</fullName>
            </value>
            <value>
                <fullName>Roof Type</fullName>
            </value>
            <value>
                <fullName>Shading</fullName>
            </value>
            <value>
                <fullName>Tax Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>