unpackaged/main/default/objects/Lead/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Referral Code</label>
    <type>AutoNumber</type>
</CustomField>