unpackaged/main/default/objects/Lead/fields/Referred_by_Code__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Code__c</fullName>
    <label>Referred by Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>