unpackaged/main/default/objects/Lead/fields/Referred_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Name__c</fullName>
    <label>Referred By Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>