unpackaged/main/default/objects/Lead/fields/Roof_Age__c.field-meta.xml
<CustomField>
    <fullName>Roof_Age__c</fullName>
    <label>Roof Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>11-15</fullName>
            </value>
            <value>
                <fullName>16-20</fullName>
            </value>
            <value>
                <fullName>21+</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>