unpackaged/main/default/objects/Lead/fields/Roof_needs_replacing__c.field-meta.xml
<CustomField>
    <fullName>Roof_needs_replacing__c</fullName>
    <label>Roof needs replacing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>