unpackaged/main/default/objects/Lead/fields/Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type__c</fullName>
    <label>Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shingle</fullName>
            </value>
            <value>
                <fullName>Corrugated Metal</fullName>
            </value>
            <value>
                <fullName>Standing Seam Metal</fullName>
            </value>
            <value>
                <fullName>Ground Mount</fullName>
            </value>
            <value>
                <fullName>Flat Roof</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>