unpackaged/main/default/objects/Lead/fields/Sales_Experience__c.field-meta.xml
<CustomField>
    <fullName>Sales_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Experience?</label>
    <type>Checkbox</type>
</CustomField>