unpackaged/main/default/objects/Lead/fields/Sales_Potential__c.field-meta.xml
<CustomField>
    <fullName>Sales_Potential__c</fullName>
    <label>Sales Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>