unpackaged/main/default/objects/Lead/fields/Sales_Rabbit_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rabbit_Appointment__c</fullName>
    <description>The Sales Rabbit Lead Appointment DateTime</description>
    <inlineHelpText>The Sales Rabbit Lead Appointment Date Time</inlineHelpText>
    <label>Sales Rabbit Appointment</label>
    <type>DateTime</type>
</CustomField>