unpackaged/main/default/objects/Lead/fields/Sales_Rabbit_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rabbit_Date_Created__c</fullName>
    <description>The Date Time the Lead was created in Sales Rabbit</description>
    <inlineHelpText>Sales Rabbit Date Created</inlineHelpText>
    <label>Sales Rabbit Date Created</label>
    <type>DateTime</type>
</CustomField>