unpackaged/main/default/objects/Lead/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chris Graham</fullName>
            </value>
            <value>
                <fullName>Alex LaCon</fullName>
            </value>
            <value>
                <fullName>Barry Gentry</fullName>
            </value>
            <value>
                <fullName>John Brady</fullName>
            </value>
            <value>
                <fullName>Colton Smith</fullName>
            </value>
            <value>
                <fullName>Lane Todd</fullName>
            </value>
            <value>
                <fullName>Vincent Smith</fullName>
            </value>
            <value>
                <fullName>Sean Buchanan</fullName>
            </value>
            <value>
                <fullName>Sales Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>