unpackaged/main/default/objects/Lead/fields/Select_a_Service__c.field-meta.xml
<CustomField>
    <fullName>Select_a_Service__c</fullName>
    <label>Select a Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check-Up Reports</fullName>
            </value>
            <value>
                <fullName>Cleaning Services</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Pest Abatement</fullName>
            </value>
            <value>
                <fullName>Removal &amp; Re-Install</fullName>
            </value>
            <value>
                <fullName>Service Visits</fullName>
            </value>
            <value>
                <fullName>Full Solar System Inspection</fullName>
            </value>
            <value>
                <fullName>Solar Panel Cleaning</fullName>
            </value>
            <value>
                <fullName>Inverter Replacement</fullName>
            </value>
            <value>
                <fullName>Optimizer Replacement</fullName>
            </value>
            <value>
                <fullName>Battery &amp; Storage Installation (Consultation &amp; Quote)</fullName>
            </value>
            <value>
                <fullName>Smart Home Installation</fullName>
            </value>
            <value>
                <fullName>System Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Roof Leak Investigation</fullName>
            </value>
            <value>
                <fullName>Solar Panel Removal &amp; Reinstallation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>