unpackaged/main/default/objects/Lead/fields/Selected_Products__c.field-meta.xml
<CustomField>
    <fullName>Selected_Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Protection Plan</fullName>
            </value>
            <value>
                <fullName>Thermostat</fullName>
            </value>
            <value>
                <fullName>Palmetto Protect Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>