unpackaged/main/default/objects/Lead/fields/Send_me_a_copy__c.field-meta.xml
<CustomField>
    <fullName>Send_me_a_copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send me a copy</label>
    <type>Checkbox</type>
</CustomField>