unpackaged/main/default/objects/Lead/fields/September_kWh__c.field-meta.xml
<CustomField>
    <fullName>September_kWh__c</fullName>
    <label>September kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>