unpackaged/main/default/objects/Lead/fields/Shade_on_roof__c.field-meta.xml
<CustomField>
    <fullName>Shade_on_roof__c</fullName>
    <label>Shade on roof?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>