unpackaged/main/default/objects/Lead/fields/Site_Needs_Verification__c.field-meta.xml
<CustomField>
    <fullName>Site_Needs_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Needs Verification</label>
    <type>Checkbox</type>
</CustomField>