unpackaged/main/default/objects/Lead/fields/Site_Verification_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Verification_Request_Date__c</fullName>
    <label>Site Verification Request Date</label>
    <type>Date</type>
</CustomField>