unpackaged/main/default/objects/Lead/fields/Solar_Market_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Solar_Market_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Market Confirmed</label>
    <type>Checkbox</type>
</CustomField>