unpackaged/main/default/objects/Lead/fields/Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan__c</fullName>
    <label>Subscription Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>